<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:Strikes="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.umkc.cjsy3c.umpirebuddy.MainActivity"
    android:background="#ffde05">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/test"
        android:id="@+id/textView3"
        android:layout_marginTop="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/balls"
        android:id="@+id/textView2"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strike"
        android:id="@+id/StrikeButton"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="strikeClicked" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ball"
        android:id="@+id/BallButton"
        android:layout_below="@+id/StrikeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:onClick="ballClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/StrikeDisplay"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/BallDisplay"
        android:layout_above="@+id/StrikeButton"
        android:layout_alignLeft="@+id/StrikeDisplay"
        android:layout_alignStart="@+id/StrikeDisplay"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/outs"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/TotalDisplay"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView"
        android:layout_alignLeft="@+id/StrikeDisplay"
        android:layout_alignStart="@+id/StrikeDisplay" />
</RelativeLayout>
